<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_User" Id="{0463916d-7129-4184-b997-63550b722424}">
    <Declaration><![CDATA[TYPE ST_User :
STRUCT
	wsUserName		 	: WSTRING;
	wsUserFullName	 	: WSTRING;
	dwGroupID			: DWORD;
	bDeactivated		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>